=== 7.4.1.0 (TBD)
* Update to Jetty 7.4.1.v20110513
* Increase thread pool min_threads to 2 (fixes test hang with 7.3+)

=== 7.2.2.0 (2010-12-28)

* Update to Jetty 7.2.2. This is major upgrade with broad java package
  name changes, class name changes, and API changes. See
  {Porting to Jetty 7}[http://wiki.eclipse.org/Jetty/Starting/Porting_to_Jetty_7]
  for general details.  Some notable changes for gem users:
  * {Handler.handle()}[http://download.eclipse.org/jetty/stable-7/apidocs/org/eclipse/jetty/server/Handler.html#handle%28java.lang.String,%20org.eclipse.jetty.server.Request,%20javax.servlet.http.HttpServletRequest,%20javax.servlet.http.HttpServletResponse%29] interface changed.
  * Context renamed to ServletContextHandler.
  * QueuedThreadPool no longer supports a low_threads (low resource) property.

=== 6.1.26.0 (2010-12-28)
* Update to Jetty 6.1.26

=== 6.1.25.0 (2010-8-31)
* Update to Jetty 6.1.25
* Expand logback gem dev dependency for compatibility with logback-1.x
* Require java for imports

=== 6.1.24.0 (2010-5-15)
* Update to Jetty 6.1.24

=== 6.1.23.0 (2010-4-21)
* Update to Jetty 6.1.23

=== 6.1.22.1 (2010-3-6)
* Set gem platform to java
* Upgraded to tarpit ~> 1.2.0

=== 6.1.22.0 (2009-12-19)
* Update to Jetty 6.1.22
* Upgrade to tarpit-1.1.0 (gemcutter)

=== 6.1.21.0 (2009-10-11)
* Update to Jetty 6.1.21

=== 6.1.20.1 (2009-10-10)
* Rename gem rjack-jetty and as module RJack::Jetty
* Update to Jetty 6.1.20
* Use rjack-tarpit for build.
* Update development dependency to rjack-logback >= 0.9.17.1

=== 6.1.19.1 (2009-7-22)
* Update to Jetty 6.1.19

=== 6.1.18.1 (2009-5-29)
* Update to Jetty 6.1.18

=== 6.1.17.1 (2009-5-2)
* Update to Jetty 6.1.17
* Use rdoc 2.4.3 and hoe 1.12.2 for build.

=== 6.1.16.1 (2009-4-4)
* Update to Jetty 6.1.16, which now uses externalized
  org.mortbay.jetty:servlet-api (2.5-20081211) dependency.
* Add logback as development dependency.

=== 6.1.14.1 (2008-12-6)
* Update to Jetty 6.1.14
* JettyBase -rename-> Jetty
