@@ -1,6 +1,7 @@
 === 7.4.1.0 (TBD)
 * Update to Jetty 7.4.1.v20110513
 * Increase thread pool min_threads to 2 (fixes test hang with 7.3+)
+* Support creating NCSARequestLog to :stderr
 
 === 7.2.2.0 (2010-12-28)
 
